Add Evolution Parameters Contract

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,6 +9,11 @@ requirements = []
 path = 'contracts/cellular-automata-management.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.evolution-parameters]
+path = 'contracts/evolution-parameters.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
