--- a/deployments/default.simnet-plan.yaml
+++ b/deployments/default.simnet-plan.yaml
@@ -54,4 +54,9 @@ plan:
             emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
             path: contracts/cellular-automata-management.clar
             clarity-version: 2
+        - emulated-contract-publish:
+            contract-name: evolution-parameters
+            emulated-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            path: contracts/evolution-parameters.clar
+            clarity-version: 2
       epoch: "2.5"
